# CoreCocos2d

./: .gitmodules  CMakeLists.txt  README.md
CoreCocos2d/: CMakeLists.txt  CoreAppDelegateCocos2d.cpp  CoreAppDelegateCocos2d.h  DescriptionSceneCocos2d.cpp  DescriptionSceneCocos2d.h  FactorySceneCocos2d.cpp  FactorySceneCocos2d.h  HolderPathsCocos2d.cpp  HolderPathsCocos2d.h  ISceneCocos2d.h  ISceneCreatorCocos2d.h  ManagerSceneCocos2d.cpp  ManagerSceneCocos2d.h  PtrCocos2d.h  RenderCocos2d.cpp  RenderCocos2d.h  SceneCocos2d.cpp  SceneCocos2d.h  SceneCreatorCocos2d.h
subs/: CMakeLists.txt
